--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ nav ul li:hover {
  flex-direction: row;
  flex-wrap: nowrap;
 justify-content: flex-end;
- width: 400px;
+ width: 540px;
  height: 70px;
  border-radius: 30px;
  overflow:hidden;
@@ -56,37 +56,25 @@ justify-content: flex-end;
 .container div:nth-child(2) {
     background-color:  white;
     color:black;
-    width: 300;
+    width: 350px;
+    font-size:35px;
+    
 }
 
 .container div:nth-child(3) {
     background-color: #1e90ff;
-    font-size: 3px;
+    width: 150;
+    text-align: center;
+    font-size: 35px;
+    vertical-align: sub;
+   
+    
     
 }
 
 
 
 
-input{
-   
-    border: none;
-    
-    
-  }
-
-  input:focus {
-    /* removing the input focus blue box. Put this on the form if you like. */
-    outline: none;
-  }
-  
-  button {
-    /* Just a little styling to make it pretty */
-    border:1px solid #1e90ff;
-    background:#1e90ff;
-    color:white;
-   
-  }  
    
 
       
